organize with workspaces

--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "noobgrep"
+name = "search"
 version = "0.1.0"
 authors = ["Joey Rosztoczy"]
 
 [dependencies]
-search = { path = "search" }
-
-[workspaces]
